# Regex

./: .gitignore  CMakeLists.txt  README.md
headers/: Regex.h  includes.h
include/Regex/: NFA.h  Regex.h  RegexParser.h  StringIter.h
source/: NFA.cpp  NFAIter.cpp  NFAState.cpp  Regex.cpp  RegexParser.cpp  StringIter.cpp
src/: CharacterClass.cpp  NFA.cpp  Regex.cpp  State.cpp  main.cpp  match.cpp  parse.cpp
src/tests/: match.cpp  matchtest.cpp  parse.cpp  preprocess.cpp  test.cpp
tests/match_tests/: CMakeLists.txt  main.cpp
tests/speed/: CMakeLists.txt  awk_speed.sh  cpp_Regex_speed  cpp_Regex_speed.cpp  cpp_speed.txt  cpp_std_speed  cpp_std_speed.cpp  grep_speed.sh  perl_speed.sh  python_speed.py  test_speeds.py
tests/speed/results/: awk_speed.txt  cpp_Regex_speed.txt  cpp_old_speed.txt  cpp_std_speed.txt  grep_speed.txt  perl_speed.txt  python_speed.txt
